--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAkUbsC-g6QhmpIbKtC9Mr11cGziUKZBKw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkUbsC-g6QhmpIbKtC9Mr11cGziUKZBKw"></script>
 
     <!-- JS site -->
     <script src="script.js?v=20151121115380"></script>
