--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="web/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkUbsC-g6QhmpIbKtC9Mr11cGziUKZBKw"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAkUbsC-g6QhmpIbKtC9Mr11cGziUKZBKw"></script>
 
     <!-- JS site -->
     <script src="web/script.js"></script>
