--- a/index.html
+++ b/index.html
@@ -9,23 +9,30 @@
 
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="web/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="web/bootstrap-3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- CSS site -->
-    <link rel="stylesheet" href="web/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 
-    <script src="web/jquery-1.12.4.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+      crossorigin="anonymous"></script>
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="web/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkUbsC-g6QhmpIbKtC9Mr11cGziUKZBKw"></script>
 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
+
     <!-- JS site -->
-    <script src="web/script.js"></script>
+    <script src="script.js"></script>
 
 </head>
 
@@ -41,12 +48,13 @@
                     <span class="icon-bar"></span>
                 </button>-->
                 <a href="#/" class="navbar-brand">DriveSafe</a>
-            </div><!--
+            </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav">
-                    <li id="meuid"><a href="#/logout">Sobre</a></li>
+                    <li id="menuConquistas"><a href="#">Conquistas</a></li>
+                    <li id="menuHistorico"><a href="#">Histórico</a></li>
                 </ul>
-            </nav>-->
+            </nav>
         </div>
     </header>
 
